// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rum client dashboard queries fetches client metrics 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "backEnd": Object {
        "percentiles": Object {
          "field": "transaction.marks.agent.timeToFirstByte",
          "hdr": Object {
            "number_of_significant_value_digits": 3,
          },
          "percents": Array [
            50,
          ],
        },
      },
      "domInteractive": Object {
        "percentiles": Object {
          "field": "transaction.marks.agent.domInteractive",
          "hdr": Object {
            "number_of_significant_value_digits": 3,
          },
          "percents": Array [
            50,
          ],
        },
      },
      "pageViews": Object {
        "value_count": Object {
          "field": "transaction.duration.us",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`rum client dashboard queries fetches js errors 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "error",
    ],
  },
  "body": Object {
    "aggs": Object {
      "errors": Object {
        "aggs": Object {
          "bucket_truncate": Object {
            "bucket_sort": Object {
              "from": 0,
              "size": 5,
            },
          },
          "sample": Object {
            "top_hits": Object {
              "_source": Array [
                "error.exception.message",
                "error.exception.type",
                "error.grouping_key",
                "@timestamp",
              ],
              "size": 1,
              "sort": Array [
                Object {
                  "@timestamp": "desc",
                },
              ],
            },
          },
        },
        "terms": Object {
          "field": "error.grouping_key",
          "size": 500,
        },
      },
      "totalErrorGroups": Object {
        "cardinality": Object {
          "field": "error.grouping_key",
        },
      },
      "totalErrorPages": Object {
        "cardinality": Object {
          "field": "transaction.id",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "agent.name": "rum-js",
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "term": Object {
              "service.language.name": "javascript",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
    "track_total_hits": true,
  },
}
`;

exports[`rum client dashboard queries fetches long task metrics 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "span",
    ],
  },
  "body": Object {
    "aggs": Object {
      "transIds": Object {
        "aggs": Object {
          "longestLongTask": Object {
            "max": Object {
              "field": "span.duration.us",
            },
          },
          "sumLongTask": Object {
            "sum": Object {
              "field": "span.duration.us",
            },
          },
        },
        "terms": Object {
          "field": "transaction.id",
          "size": 1000,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "span.type": "longtask",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`rum client dashboard queries fetches page load distribution 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "durPercentiles": Object {
        "percentiles": Object {
          "field": "transaction.duration.us",
          "hdr": Object {
            "number_of_significant_value_digits": 3,
          },
          "percents": Array [
            50,
            75,
            90,
            95,
            99,
          ],
        },
      },
      "minDuration": Object {
        "min": Object {
          "field": "transaction.duration.us",
          "missing": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`rum client dashboard queries fetches page view trends 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "pageViews": Object {
        "aggs": undefined,
        "auto_date_histogram": Object {
          "buckets": 50,
          "field": "@timestamp",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`rum client dashboard queries fetches rum core vitals 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "cls": Object {
        "percentiles": Object {
          "field": "transaction.experience.cls",
          "percents": Array [
            50,
          ],
        },
      },
      "clsRanks": Object {
        "percentile_ranks": Object {
          "field": "transaction.experience.cls",
          "keyed": false,
          "values": Array [
            0.1,
            0.25,
          ],
        },
      },
      "fcp": Object {
        "percentiles": Object {
          "field": "transaction.marks.agent.firstContentfulPaint",
          "percents": Array [
            50,
          ],
        },
      },
      "fid": Object {
        "percentiles": Object {
          "field": "transaction.experience.fid",
          "percents": Array [
            50,
          ],
        },
      },
      "fidRanks": Object {
        "percentile_ranks": Object {
          "field": "transaction.experience.fid",
          "keyed": false,
          "values": Array [
            100,
            300,
          ],
        },
      },
      "lcp": Object {
        "percentiles": Object {
          "field": "transaction.marks.agent.largestContentfulPaint",
          "percents": Array [
            50,
          ],
        },
      },
      "lcpRanks": Object {
        "percentile_ranks": Object {
          "field": "transaction.marks.agent.largestContentfulPaint",
          "keyed": false,
          "values": Array [
            2500,
            4000,
          ],
        },
      },
      "tbt": Object {
        "percentiles": Object {
          "field": "transaction.experience.tbt",
          "percents": Array [
            50,
          ],
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
          Object {
            "term": Object {
              "user_agent.name": "Chrome",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`rum client dashboard queries fetches rum services 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "services": Object {
        "terms": Object {
          "field": "service.name",
          "size": 1000,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
          Object {
            "term": Object {
              "my.custom.ui.filter": "foo-bar",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;
